kubernetes/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-webserver
  namespace: my-go-webserver
  labels:
    app: my-go-webserver
    tier: backend
spec:
  selector:
    matchLabels:
      app: my-go-webserver
      tier: backend
  replicas: 1
  template:
    metadata:
      annotations: {}
      labels:
        app: my-go-webserver
        tier: backend
    spec:
      containers:
      - name: my-go-webserver
        image: localhost:5000/my-go-webserver:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 210
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 80
          periodSeconds: 3
        ports:
        - name: http
          containerPort: 8080
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "30"]
---
apiVersion: v1
kind: Service
metadata:
  name: my-go-webserver
  namespace: my-go-webserver
  labels:
    app: my-go-webserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    tier: backend
    app: my-go-webserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-go-webserver
  namespace: my-go-webserver
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app-stack.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-go-webserver
            port:
              number: 8080
---
